# ISynKGR

./: .gitignore  BENCHMARKS.md  Makefile  README.md  WHY_NOT_OTHERS.md  docker-compose.yml  pyproject.toml  run_evaluation.py  run_framework.py
.github/workflows/: ci.yml
benchmark/: benchmark_full.json  config.json  evaluate.py  final_report.py  full_workflow.py  harness.py  metrics.py  orchestrate.py  report.py  run.py  run_sut.py  runner.py  sample_validate.py  simple_llm_test.py  sut_contract.py  validate_dataset.py
benchmark/data_gen/: pipeline.py
datasets/generators/: gen_crosswalk.py
docker/compose/: docker-compose.bench.yml
docker/isynkgr/: Dockerfile
docs/: BASELINES.md  DATASETS.md
evaluation/: evaluator.py
hybrid_framework/: framework.py
isynkgr/: __init__.py  cli.py  translator.py
isynkgr/adapters/: aas.py  iec61499.py  ieee1451.py  opcua.py
isynkgr/canonical/: schemas.py
isynkgr/evaluation/: benchmark_runner.py
isynkgr/icr/: __init__.py  mapping_output_contract.py  mapping_schema.py  path_validation.py
knowledge_graphs/: builder.py
llm_integration/: manager.py
ontology_learning/: pipeline.py
scripts/: gen_samples.py  gen_samples.sh  run_bench.py  run_bench.sh
tests/: test_adapters.py  test_benchmark_runner.py  test_compose_canonical_entrypoints.py  test_evaluate_dedup.py  test_full_workflow.py  test_integration_smoke.py  test_llm_ollama.py  test_mapping_output_contract_pipeline.py  test_orchestrate.py  test_path_validation.py  test_prompt_alignment.py  test_sample_validate.py
utils/: config.py  helpers.py
(+39 files in other folders)
