[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isynkgr"
version = "0.1.0"
description = "Industrial Semantic Knowledge Graph Reasoner benchmark framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
plots = [
  "matplotlib==3.9.2",
]

[project.scripts]
isynkgr-gen-samples = "isynkgr.cli:gen_samples_main"
isynkgr-run-bench = "isynkgr.cli:run_bench_cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["isynkgr*"]
