[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isynkgr"
version = "0.2.0"
description = "Industrial Semantic Knowledge Graph Reasoner translation and benchmark framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic>=2,<3"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["isynkgr*", "benchmark*"]
